--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 services:
   db:
     image: "${MONGO_IMAGE}"   
-    container_name: fhirwork-base
+    container_name: amplifhir-base
     ports:
       - "${MONGO_PORT}:27017"
     volumes:
